# aleonard.us-api

./: .coveragerc  .dcignore  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  SDLC.md  dc-dev.yml  dc-prod.yml  docker-compose.yml  fix_lint.sh  main.py  openapi.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  schemas.py  taskfile.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/prompts/: general.prompt.md
.github/workflows/: ci.yaml  deploy_cloud_run.yaml  deploy_qa.yaml  lint.yaml  promote.yaml  publish_docker.yaml  security.yaml  security.yml  security_main.yaml  test.yaml
alembic/: env.py
alembic/versions/: 2c4970e2c27f_movie_detail_year_genre_director_actors_.py  32dcf2b915ce_games_detail_fields_tracker_lists.py  56d230517330_movie_tracker_on_watchlist_on_rankings.py  5cfe462a0464_books_countries_detail_fields_tracker_.py  98c43f9b03de_tv_detail_fields_tracker_lists.py  a3732379d384_initial_schema.py  a7c8d95e2f41_episode_watched_at.py  b41f0a7c9e21_api_keys_table.py  bdf47c1723a4_tracker_fk_indexes.py  c7d2e91b4f03_exclusive_list_membership.py  cf876ee82d17_notifications_table.py  (+3 more)
app/: config.py  main.py  run.py
auth/: authentication.py  oauth2.py
db/: database.py  db_user.py  hash.py  models.py
docker/: dc-dev.yml
docs/: mcp-usage.md
log/: logging_config.py
requirements/: base.txt  dev.txt  test.txt
scripts/: generate_postman_collection.py
test/: octokit-test.js
tests/: conftest.py
utils/: exceptions.py
(+101 files in other folders)
