[project]
name = "aleonard-us-api"
version = "0.1.0"
description = "Basic api to demonstrate a secure code pipeline."
authors = [
    {name = "Adam",email = "adam@aleonard.us"}
]
license = {text = "GNU"}
readme = "README.md"
requires-python = ">=3.12,<4.0.0"

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
fastapi = ">=0.115.8,<0.116.0"
uvicorn = "0.34.0"
SQLAlchemy = "2.0.38"
pydantic = "2.10.6"
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.20"
email-validator = "2.2.0"
python-dotenv = "1.0.1"
python-logging-loki = "0.3.1"
PyJWT = "2.10.1"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
pylint = "3.3.4"
pre-commit = "4.1.0"
openapi-spec-validator = "0.7.1"

[tool.poetry.group.test.dependencies]
pytest = "8.3.4"
pytest-asyncio = "0.25.3"
pytest-cov = "6.0.0"
pytest-html = "4.1.1"
pytest-metadata = "3.1.1"
Faker = "35.2.0"
httpx = "0.28.1"
coverage = "7.6.10"

[tool.poetry]
packages = [{include = "aleonard"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
